--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,15 +1,3 @@
+@import "variables/index";
 @import "partials/index";
-
-.circle  {
-  width: 90px;
-  height: 90px;
-  background-color: purple;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 90px;
-}
-
-.circle img {
-  width: 50px;
-  vertical-align: middle;
-}
+@import "components/index";
