--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -1,3 +1,4 @@
+
 @import "nav";
 @import "social";
 @import "charts";
@@ -5,3 +6,4 @@
 @import "recent-activity";
 @import "message-user";
 @import "settings";
+@import "general";
