--- a/scss/partials/_charts.scss
+++ b/scss/partials/_charts.scss
@@ -1,6 +1,4 @@
-.dashboard-wrapper {
-  width: 100%;
-}
+
 
 *{
   box-sizing: border-box;
@@ -14,4 +12,17 @@
   canvas {
     padding: 10px;
   }
+}
+
+.bar-graph {
+  width: 50%;
+  float: left;
+  margin: 0;
+}
+
+.pie-chart {
+  width: 50%;
+  float: right;
+  margin: 0;
+  border-left: 1px solid $cBorder;
 }
