--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -19,9 +19,31 @@ header {
   }
   .notifications {
     margin-left: auto;
+    margin-right: 20px;
     width: 25px;
     position: relative;
     top: 12.5px;
+  }
+  .user {
+    border-left: 1px solid $cBorder;
+    height: 40px;
+    position: relative;
+    top: 5px;
+    padding-right: 20px;
+    img {
+      display: inline-block;
+      width: 25px;
+      border-radius: 100%;
+      position: relative;
+      top: 40%;
+      transform: translateY(-50%);
+      margin: 0 5px 0 10px;
+    }
+    p {
+      display: inline-block;
+      position: relative;
+      top: -5px;
+    }
   }
 }
 
@@ -37,9 +59,18 @@ header {
   margin-top: 50px;
   display: flex;
   justify-content: space-around;
+  @include desktop {
+    width: 50px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
   .nav-icon {
     width: 25px;
-
+    @include desktop {
+      margin: 0 auto;
+      padding-top: 20px;
+    }
   }
 }
 
@@ -64,8 +95,15 @@ header {
     text-align: right;
     input {
       position: relative;
+      height: 1.6em;
+      width: 300px;
       right: 15px;
-      top: 12px;
+      top: calc((50px - 1.6em) / 2);
+      border-radius: 5px;
+      border: 1px solid $cBorder;
     }
+  }
+  @include desktop {
+    padding-top: 50px;
   }
 }
