--- a/scss/partials/_recent-activity.scss
+++ b/scss/partials/_recent-activity.scss
@@ -1,27 +1,39 @@
 .recent-activity {
   color: $cTextPrimary;
-  border-top: 2px solid #f1f1f1;
   width: 100%;
-  padding: 30px;
+  padding: 0px 30px 0px 30px;
+  border-left: 1px solid $cBorder;
+  @include desktop {
+    display: inline-block;
+    width: 50%;
+    float: right;
+  }
   .member {
     display: block;
     padding-top: 30px;
     padding-bottom: 30px;
     border-bottom: 1px solid #f1f1f1;
+    height: 70px;
     img {
       border-radius: 100%;
-      width: 100px;
-      display: inline-block;
-    }
-    .member-info {
+      width: 50px;
       display: inline-block;
       position: relative;
       top: 50%;
       transform: translateY(-50%);
+      float: left;
+    }
+    .member-info {
+      display: inline-block;
+      margin-left: 10px;
       p {
+        margin: 0;
         width: 100%;
         display: block;
       }
     }
+  }
+  .member:last-child {
+    border-bottom: none;
   }
 }
