--- a/scss/partials/_social.scss
+++ b/scss/partials/_social.scss
@@ -1,21 +1,34 @@
 
 .social {
-  
+  border-top: 1px solid $cBorder;
+  padding: 0px 30px 30px 30px;
   width: 100%;
   display: block;
+  color: $cTextPrimary;
   .social-box {
     width: 100%;
     background: #FBFBFB;
     border: 2px solid #F1F1F1;
     display: flex;
+    margin-bottom: 10px;
+    padding: 10px;
+    @include desktop {
+      width: 33%;
+      display: inline-block;
+    }
   }
   .bubble {
+    position: relative;
+    display: inline-block;
     width: 75px;
     height: 75px;
-    background: #7278B8;
+    background: $cSocialMedia;
     padding: 10px;
     border-radius: 100%;
     text-align: center;
+    @include desktop {
+      bottom: 7px;
+    }
     img {
       position: relative;
       top: 50%;
@@ -25,8 +38,9 @@
   }
   .stats {
     margin-left: 10px;
+    display: inline-block;
     h2 {
-      color: #7278b8;
+      color: $cSocialMedia;
       margin: 0;
     }
     p {
