--- a/css/app.css
+++ b/css/app.css
@@ -9,15 +9,30 @@ header {
   z-index: 100; }
   header .appName {
     display: inline-block;
-    margin-right: auto; }
+    margin-right: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-25%);
+    margin-left: 10px; }
     header .appName h1 {
+      display: inline;
       font-size: 1.3em; }
+    header .appName .thin {
+      font-weight: 100; }
   header .notifications {
     margin-left: auto;
     margin-right: 20px;
     width: 25px;
     position: relative;
     top: 12.5px; }
+    header .notifications .new-notification {
+      position: absolute;
+      height: 5px;
+      width: 5px;
+      border-radius: 100%;
+      background: #86C791;
+      top: 0;
+      right: 0; }
   header .user {
     border-left: 1px solid #cccccc;
     height: 40px;
@@ -77,7 +92,7 @@ header {
     .dashboard-top .search input {
       position: relative;
       height: 1.6em;
-      width: 300px;
+      width: 250px;
       right: 15px;
       top: calc((50px - 1.6em) / 2);
       border-radius: 5px;
@@ -85,6 +100,25 @@ header {
   @media (min-width: 1024px) {
     .dashboard-top {
       padding-top: 50px; } }
+
+.alert {
+  width: calc(100% - 20px);
+  margin: 0 auto;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: #7476c0;
+  color: #fff; }
+  .alert p {
+    padding: 10px 0 10px 10px;
+    display: inline-block;
+    margin: 0; }
+  .alert input {
+    margin: 0;
+    float: right;
+    background: none;
+    border: none;
+    color: #fff;
+    padding: 10px; }
 
 .social {
   border-top: 1px solid #cccccc;
@@ -99,6 +133,8 @@ header {
     display: flex;
     margin-bottom: 10px;
     padding: 10px; }
+    .social .social-box p {
+      font-weight: 100; }
     @media (min-width: 1024px) {
       .social .social-box {
         width: 33%;
@@ -134,22 +170,31 @@ header {
   box-sizing: border-box; }
 
 .chart {
+  color: #666666;
   margin-top: 25px;
   margin-bottom: 25px;
   padding: 1px;
   width: 100%; }
   .chart canvas {
     padding: 10px; }
+  .chart h3 {
+    margin-top: 0;
+    float: left;
+    margin-left: 30px; }
+
+.line-graph .chart-buttons {
+  float: right;
+  margin-right: 20px; }
 
 .bar-graph {
   width: 50%;
   float: left;
-  margin: 0; }
+  margin: 25px 0 0 0; }
 
 .pie-chart {
   width: 50%;
   float: right;
-  margin: 0;
+  margin: 25px 0 0 0;
   border-left: 1px solid #cccccc; }
 
 .new-members {
@@ -163,8 +208,6 @@ header {
       float: left; } }
   .new-members .member {
     display: block;
-    padding-top: 30px;
-    padding-bottom: 30px;
     border-bottom: 1px solid #f1f1f1;
     height: 70px; }
     .new-members .member img {
@@ -177,7 +220,10 @@ header {
       float: left; }
     .new-members .member .member-info {
       display: inline-block;
-      margin-left: 10px; }
+      margin-left: 10px;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%); }
       .new-members .member .member-info p {
         margin: 0;
         width: 100%;
@@ -189,7 +235,10 @@ header {
         text-decoration: none; }
     .new-members .member .date {
       display: inline-block;
-      float: right; }
+      float: right;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%); }
   .new-members .member:last-child {
     border-bottom: none; }
 
@@ -205,11 +254,9 @@ header {
       float: right; } }
   .recent-activity .member {
     display: block;
-    padding-top: 30px;
-    padding-bottom: 30px;
     border-bottom: 1px solid #f1f1f1;
     height: 70px; }
-    .recent-activity .member img {
+    .recent-activity .member .profile-pic {
       border-radius: 100%;
       width: 50px;
       display: inline-block;
@@ -217,20 +264,57 @@ header {
       top: 50%;
       transform: translateY(-50%);
       float: left; }
+    .recent-activity .member .social-activity {
+      margin-left: 5px;
+      width: 25px;
+      position: relative;
+      top: 20%; }
     .recent-activity .member .member-info {
       display: inline-block;
-      margin-left: 10px; }
+      position: relative;
+      margin-left: 10px;
+      top: 1px;
+      top: 50%;
+      transform: translateY(-50%); }
       .recent-activity .member .member-info p {
         margin: 0;
         width: 100%;
         display: block; }
+    .recent-activity .member .right-arrow {
+      float: right;
+      width: 25px;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%); }
   .recent-activity .member:last-child {
     border-bottom: none; }
 
 .message-user {
   color: #666666;
   border-top: 1px solid #cccccc;
-  padding: 0px 30px 30px 30px; }
+  padding: 0px 30px 30px 30px;
+  position: relative; }
+  .message-user .send-response {
+    display: none;
+    z-index: 100;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    text-align: center; }
+    .message-user .send-response h3 {
+      font-size: 1.5em;
+      display: block;
+      position: relative;
+      top: 30%; }
+    .message-user .send-response input {
+      display: block;
+      position: relative;
+      top: 30%;
+      margin: 0 auto; }
+  .message-user .blur {
+    filter: blur(10px); }
   @media (min-width: 1024px) {
     .message-user {
       display: inline-block;
@@ -301,8 +385,23 @@ header {
 :focus {
   outline: none; }
 
+input {
+  cursor: pointer; }
+
 .notifications {
   width: 50px; }
+
+.chart-buttons .button {
+  background: white;
+  color: #666666;
+  border: none;
+  border-radius: 23px; }
+.chart-buttons .button:hover {
+  background: #86C791;
+  color: #fff; }
+.chart-buttons .selected {
+  background: #86C791;
+  color: #fff; }
 
 .message-user .send {
   width: 100%;
@@ -313,6 +412,18 @@ header {
   color: white;
   border-radius: 3px;
   height: 38px; }
+.message-user .send:hover {
+  background: #86C791; }
+.message-user .dismiss {
+  background: #7476c0;
+  border: none;
+  padding: 10px;
+  color: white;
+  border-radius: 3px;
+  height: 38px;
+  width: 150px; }
+.message-user .dismiss:hover {
+  background: #86C791; }
 
 .settings .toggle {
   position: relative;
@@ -354,6 +465,8 @@ header {
   padding: 10px;
   border: none;
   border-radius: 3px; }
+.settings .save:hover {
+  background: #86C791; }
 .settings .cancle {
   width: 46%;
   color: #fff;
@@ -361,5 +474,7 @@ header {
   padding: 10px;
   border: none;
   border-radius: 3px; }
+.settings .cancle:hover {
+  background: #666666; }
 
 /*# sourceMappingURL=app.css.map */
