--- a/scss/partials/_new-members.scss
+++ b/scss/partials/_new-members.scss
@@ -9,8 +9,6 @@
   }
   .member {
     display:block;
-    padding-top: 30px;
-    padding-bottom: 30px;
     border-bottom: 1px solid #f1f1f1;
     height: 70px;
     img {
@@ -25,6 +23,9 @@
     .member-info {
       display: inline-block;
       margin-left: 10px;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
       p {
         margin: 0;
         width: 100%;
@@ -40,6 +41,9 @@
     .date {
       display: inline-block;
       float: right;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
   .member:last-child {
