--- a/scss/partials/_social.scss
+++ b/scss/partials/_social.scss
@@ -12,6 +12,9 @@
     display: flex;
     margin-bottom: 10px;
     padding: 10px;
+    p {
+      font-weight: 100;
+    }
     @include desktop {
       width: 33%;
       display: inline-block;
